# ts2rs-oxc

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: axe-types.ts  minimal.rs
examples/axe/: axe-types.ts  axe.d.ts  pnpm-lock.yaml
src/: capitalize.rs  hashable_set.rs  main.rs  rs_types.rs  string_utils.rs  visitor.rs
src/builder/: errors.rs  make_rs_type.rs  mod.rs  options.rs  reference_resolver.rs  visitor.rs  visitor_impl.rs
