[package]
name = "ts2rs-oxc"
description = "Crate to convert TypeScript types to Rust types using the OXC project"
repository = "https://github.com/dra11y/ts2rs-oxc"
version = "0.1.0"
edition = "2021"

[dependencies]
codegen = "0.2.0"
convert_case = "0.6.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
oxc_allocator = { version = "0.30.0", features = ["serialize"] }
oxc_ast = { version = "0.30.0", features = ["serialize"] }
oxc_codegen = "0.30.1"
oxc_diagnostics = "0.30.1"
oxc_parser = "0.30.1"
oxc_resolver = "1.11.0"
oxc_span = { version = "0.30.0", features = ["serialize"] }
oxc_syntax = "0.30.1"
pico-args = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
